--- a/style.css
+++ b/style.css
@@ -237,3 +237,7 @@
 .terms-and-conditions-container p:not(ul p), .terms-and-conditions-container h3{
 	margin-bottom: 15px;
 }
+
+.opacity-1{
+	opacity: 1;
+}
