Feat. Templates, lang and friends

--- a/templates/core/head.html
+++ b/templates/core/head.html
@@ -26,6 +26,7 @@
     <meta
         name="theme-color"
         content="#ffffff" />
-    <link rel=“stylesheet” type=“text/css” href=“assets/style.css” />
+    <link rel="stylesheet" crossorigin="" href="/main.css?{{assets_version}}">
+    <script type="module" src="/main.js?{{assets_version}}" async></script>
     <title>ChecknGo</title>
 </head>
